syntax = "proto2";

package mapPackage;

message value_type {
    required string content = 1;
}

message WithMap {
    map<string, value_type> map_field = 1;
    map<int32, int32> another_map_field = 2;
}
